fix of scrollbar for safari

--- a/src/scss/layouts/layout_000/_body.scss
+++ b/src/scss/layouts/layout_000/_body.scss
@@ -1,6 +1,20 @@
+html {
+    color-scheme: light;
+}
 body {
     background-color: $backgroundGray;
     font-family: "Roboto", sans-serif;
     font-size: $baseFontSize;
     -webkit-tap-highlight-color: transparent;
 }
+::-webkit-scrollbar {
+    width: 16px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    height: 56px;
+    border-radius: 8px;
+    border: 4px solid transparent;
+    background-clip: content-box;
+    background-color: #ababab;
+  }
